# orb8

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
.lima/: orb8-dev.yaml
deploy/: daemonset.yaml  e2e-test-pods.yaml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md
orb8-agent/: Cargo.toml  build.rs
orb8-agent/src/: aggregator.rs  cgroup.rs  grpc_server.rs  k8s_watcher.rs  lib.rs  main.rs  net.rs  pod_cache.rs  probe_loader.rs
orb8-cli/: Cargo.toml
orb8-cli/src/: lib.rs  main.rs
orb8-common/: Cargo.toml
orb8-common/src/: lib.rs
orb8-probes/: Cargo.toml  build.rs
orb8-probes/src/: lib.rs  network_probe.rs
orb8-proto/: Cargo.toml  build.rs
orb8-proto/proto/: orb8.proto
orb8-proto/src/: lib.rs
orb8-server/: Cargo.toml
orb8-server/src/: lib.rs
scripts/: check-prerequisites.sh  e2e-test.sh  setup-dev.sh  setup-lima.sh  smoke-test.sh
src/: error.rs  lib.rs  main.rs
src/cli/: commands.rs  mod.rs
src/ebpf/: events.rs  loader.rs  maps.rs  mod.rs
src/k8s/: client.rs  mod.rs  types.rs  watcher.rs
src/metrics/: collector.rs  exporter.rs  mod.rs
src/ui/: dashboard.rs
tests/: integration_test.rs
