[workspace]
resolver = "2"
members = [
    "orb8-probes",
    "orb8-common",
    "orb8-agent",
    "orb8-server",
    "orb8-cli",
    "orb8-proto",
]

# Exclude eBPF crate from default build to prevent cargo from building it for host
default-members = [
    "orb8-common",
    "orb8-agent",
    "orb8-server",
    "orb8-cli",
    "orb8-proto",
]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"
