[package]
name = "orb8-agent"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "Node agent for orb8 (DaemonSet)"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
orb8-common = { path = "../orb8-common" }

[target.'cfg(target_os = "linux")'.dependencies]
aya = { version = "0.13", features = ["async_tokio"] }
aya-log = "0.2"
libc = "0.2"

[build-dependencies]
aya-build = "0.1.2"
cargo_metadata = "0.19"
anyhow = "1.0"

[lib]
path = "src/lib.rs"

[[bin]]
name = "orb8-agent"
path = "src/main.rs"
