[package]
name = "orb8-probes"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "eBPF probes for orb8 (kernel space)"
publish = false

[dependencies]
aya-ebpf = "0.1.1"
aya-log-ebpf = "0.1.0"
orb8-common = { path = "../orb8-common", default-features = false }

[[bin]]
name = "network_probe"
path = "src/network_probe.rs"
